Add some meta tags

--- a/templates/quikdecision.html
+++ b/templates/quikdecision.html
@@ -3,6 +3,10 @@
 <head>
 <title>QuikDecision</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<meta name="author" content="G. Wade Johnson">
+<meta name="description" content="Can't decide? QuikDecision's here to help. Flip a coin. Roll the dice. Ask the Oracle. And more.">
+<meta name="keywords" content="decisions,coin flip,roll dice,the oracle,random,pick a number,entertainment">
+<meta name="robots" content="nofollow">
 <style>
     .extra {
         font-size: 80%;
@@ -225,7 +229,7 @@
                                     <textarea cols="30" rows="5" id="strings" name="strings"
                                         placeholder="One string per line"></textarea><br />
                                     <button class="decide btn btn-outline-primary btn-sm mr-5" name="select" type="button">Select</button>
-                                    <button class="btn btn-outline-primary btn-sm ml-5" id="name_list"
+                                    <button class="btn btn-outline-primary btn-sm ml-4" id="name_list"
                                             name="name_list" type="button" data-toggle="modal" data-target="#list_modal">Save List</button>
                                 </form>
                                 <div class="mt-3">
