--- a/templates/quikdecision.html
+++ b/templates/quikdecision.html
@@ -142,10 +142,11 @@
                                         name="expr_list" type="button" data-toggle="modal" data-target="#dice_saved_modal">Save Expression</button>
                               </form>
                               <div class="mt-3">
-                                <select class="custom-select" id="dice_saved_names">
+                                <select class="custom-select mb-1" id="dice_saved_names">
                                   <option></option>
                                 </select>
-                                <button id="dice_load" class="btn btn-outline-primary btn-sm mt-1">Load Expression</button>
+                                <button id="dice_load" class="btn btn-outline-primary btn-sm mr-2">Load Expression</button>
+                                <button id="dice_remove" class="btn btn-outline-primary btn-sm">Remove Expression</button>
                               </div>
                             </div>
                             <div class="col col-lg-9 answer">Value: <span class="value"> </span><br />
@@ -241,10 +242,11 @@
                                             name="name_list" type="button" data-toggle="modal" data-target="#select_saved_modal">Save List</button>
                                 </form>
                                 <div class="mt-3">
-                                  <select class="custom-select" id="select_saved_names">
+                                  <select class="custom-select mb-1" id="select_saved_names">
                                     <option></option>
                                   </select>
-                                  <button id="select_load" class="btn btn-outline-primary btn-sm mt-1">Load List</button>
+                                  <button id="select_load" class="btn btn-outline-primary btn-sm mr-2">Load List</button>
+                                  <button id="select_remove" class="btn btn-outline-primary btn-sm">Remove List</button>
                                 </div>
                             </div>
                             <div class="col col-lg-8 answer"><span class="value"> </span></div>
@@ -263,9 +265,9 @@
     <div class="modal-content">
       <div class="modal-body">
         <form>
-          <input type="text" name="saved_expr_name" id="saved_expr_name" placeholder="Name for saved dice expression" value="" />
-          <button class="btn btn-outline-primary btn-sm float-right" id="save_expr"
-                  name="save_expr" type="button">Save</button>
+          <input type="text" name="saved_expr_name" class="name" placeholder="Name for saved dice expression" value="" />
+          <button class="btn btn-outline-primary btn-sm float-right save_name"
+                  type="button">Save</button>
         </form>
       </div>
     </div>
@@ -276,9 +278,9 @@
     <div class="modal-content">
       <div class="modal-body">
         <form>
-          <input type="text" name="saved_list_name" id="saved_list_name" placeholder="Name for saved value" value="" />
-          <button class="btn btn-outline-primary btn-sm float-right" id="save_list"
-                  name="save_list" type="button">Save</button>
+          <input type="text" name="saved_list_name" class="name" placeholder="Name for saved value" value="" />
+          <button class="btn btn-outline-primary btn-sm float-right save_name"
+                  type="button">Save</button>
         </form>
       </div>
     </div>
@@ -403,6 +405,34 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script>
+var examples = {
+    'select': {
+        '* Cuisine': [
+            "Burgers", "BBQ",
+            "Italian", "French",
+            "Pizza",   "Tex-Mex",
+            "Cajun",   "Mediterranean",
+            "Seafood", "Greek",
+            "Indian",  "Chinese",
+            "Thai",    "Vietnamese",
+            "Sushi",   "Steak"
+        ].join("\n"),
+        '* After Dinner': [
+            "Bubble Tea", "Cheesecake",
+            "Coffee",     "Cookies",
+            "Frozen Yogurt", "Gelato",
+            "Ice Cream", "Pastries",
+            "Pie"
+        ].join("\n"),
+        '* Rock/Paper/Scissors': "Rock\nPaper\nScissors",
+        '* Rock/Paper/Scissors/Lizard/Spock': "Rock\nPaper\nScissors\nLizard\nSpock",
+    },
+    "dice": {
+        '* Craps': "2d6",
+        '* Yahtzee': "5d6",
+    }
+};
+
 function make_decision(id, data) {
     let form = $(id +" form");
     $.ajax({
@@ -457,49 +487,50 @@ function remove_saved(key, name)
     localStorage.removeItem(prefix(key) + name);
 }
 function fill_saved_list(key) {
-    let id = key + "_saved_names";
-    $("#" + id).find('option').remove();
-    let saved = get_saved_names(key);
-    if(key == "select")
-    {
-        saved.push(
-            '* Cuisine',
-            '* After Dinner',
-            '* Rock/Paper/Scissors',
-            '* Rock/Paper/Scissors/Lizard/Spock',
-        );
-    }
+    let id = "#" + key + "_saved_names";
+    $(id).find('option').remove();
+    let saved = get_saved_names(key).concat(Object.keys(examples[key]).sort());
     let options = '<option></option>';
     for(let i=0; i<saved.length; ++i) {
         options += '<option>' + saved[i] + '</option>';
     }
-    $("#" + id).append(options);
+    $(id).append(options);
+}
+function load_saved_value(key, input)
+{
+    let name = $("#" + key + "_saved_names").val();
+    if(name)
+    {
+        $(input).val(examples[key][name] || get_saved(key, name));
+    }
+}
+function save_config(key, input)
+{
+    let id = "#" + key + "_saved_modal";
+    let name = $(id + " .name").val();
+    if(name && !examples[key][name])
+    {
+        let value = $(input).val();
+        if(value) { add_saved(key, name, value); }
+        else      { remove_saved(key, name); }
+        $(id + " .name").val("");
+        fill_saved_list(key);
+    }
+    $(id).modal('hide')
+}
+function remove_saved_value(key)
+{
+    let name = $("#" + key + "_saved_names").val();
+    if(name && !examples[key][name])
+    {
+        remove_saved(key, name);
+        fill_saved_list(key);
+    }
 }
 $(document).on("keypress", ":input:not(textarea)", function(event) {
     if (event.keyCode == 13) { event.preventDefault(); }
 });
 $( document ).ready(function() {
-    var examples = {
-        '* Cuisine': [
-            "Burgers", "BBQ",
-            "Italian", "French",
-            "Pizza",   "Tex-Mex",
-            "Cajun",   "Mediterranean",
-            "Seafood", "Greek",
-            "Indian",  "Chinese",
-            "Thai",    "Vietnamese",
-            "Sushi",   "Steak"
-        ].join("\n"),
-        '* After Dinner': [
-            "Bubble Tea", "Cheesecake",
-            "Coffee",     "Cookies",
-            "Frozen Yogurt", "Gelato",
-            "Ice Cream", "Pastries",
-            "Pie"
-        ].join("\n"),
-        '* Rock/Paper/Scissors': "Rock\nPaper\nScissors",
-        '* Rock/Paper/Scissors/Lizard/Spock': "Rock\nPaper\nScissors\nLizard\nSpock",
-    };
     $(".errmsg").hide();
     $(".answer").hide();
     define_decision("#coin", {});
@@ -508,57 +539,37 @@ $( document ).ready(function() {
     define_decision("#likely");
     define_decision("#pick");
     define_decision("#select");
-    $("#save_expr").click(function(event) {
-        let name = $("#saved_expr_name").val();
-        let key = "dice";
-        if(name)
-        {
-            let value = $("#expr").val();
-            if(value) { add_saved(key, name, value); }
-            else      { remove_saved(key, name); }
-            $("#saved_expr_name").val("");
-            fill_saved_list(key);
-        }
-        $('#dice_saved_modal').modal('hide')
+    $("#dice_saved_modal button.save_name").click(function(event) {
+        save_config("dice", "#expr");
         return false;
     });
-    $("#save_list").click(function(event) {
-        let name = $("#saved_list_name").val();
-        let key = "select";
-        if(name && !examples[name])
-        {
-            let value = $("#strings").val();
-            if(value) { add_saved(key, name, value); }
-            else      { remove_saved(key, name); }
-            $("#saved_list_name").val("");
-            fill_saved_list(key);
-        }
-        $('#select_saved_modal').modal('hide')
+    $("#select_saved_modal button.save_name").click(function(event) {
+        save_config("select", "#strings");
         return false;
     });
     fill_saved_list("select");
     fill_saved_list("dice");
     $("#select_load").click(function(event) {
-        let name = $("#select_saved_names").val();
-        if(name)
-        {
-            $("#strings").val(examples[name] || get_saved("select", name));
-        }
+        load_saved_value("select", "#strings");
         return false;
     });
     $("#dice_load").click(function(event) {
-        let name = $("#dice_saved_names").val();
-        if(name)
-        {
-            $("#expr").val(get_saved("dice", name));
-        }
+        load_saved_value("dice", "#expr");
+        return false;
+    });
+    $("#select_remove").click(function(event) {
+        remove_saved_value("select");
+        return false;
+    });
+    $("#dice_remove").click(function(event) {
+        remove_saved_value("dice");
         return false;
     });
     $('#select_saved_modal').on('shown.bs.modal', function () {
-        $('#saved_list_name').trigger('focus')
+        $('#select_saved_modal .name').trigger('focus')
     });
     $('#dice_saved_modal').on('shown.bs.modal', function () {
-        $('#saved_expr_name').trigger('focus')
+        $('#dice_saved_modal .name').trigger('focus')
     });
 });
 </script>
