Tweak mime-type and update spec.

--- a/templates/quikdecision.html
+++ b/templates/quikdecision.html
@@ -394,7 +394,7 @@
 </div> <!-- container -->
 <footer id="colophon" role="contentinfo" class="fixed-bottom ml-5 mb-3>
     <div class="site-info">
-        <div class="footercopy">Copyright 2018, G. Wade Johnson. Licensed under Creative Commons Attribution License 2.5.
+        <div class="footercopy">Copyright 2018, G. Wade Johnson. Licensed under Creative Commons Attribution License 3.0 Unported.
         <span class="footercredit ml-4"><a href="/static/attribution.html" target="_blank" rel="noopener">Attributions</a></span>
         <span class="footercredit ml-4"><a href="/static/privacy.html" target="_blank" rel="noopener">Privacy Policy</a></span>
         </div>
